# applist

./: Procfile  manage.py  requirements.txt
applist/: asgi.py  settings.py  urls.py  wsgi.py
listapp/: views.py
listapp/migrations/: 0001_initial.py  0002_auto_20200516_1450.py
mypkg/: pyproject.toml
mypkg/tests/: test_mypkg.py
staticfiles/: staticfiles.json
staticfiles/css/: style.9d7152c19eff.css.br  style.css
templates/: base.html
templates/listapp/: new_search.html
