[tool.poetry]
name = "mypkg"
version = "0.1.0"
description = ""
authors = ["Iradini <mariairadini@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
anaconda = "^0.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
